@@ -1,9 +1,9 @@
           <h2><a name="What"></a>Direct Access</h2>
           <p>
-You can also directly access the
-<a href="http://sdcc.sourceforge.net/snapshots/">raw directories</a>
-where these snapshots are stored, rather than using this pretty
-html version.
+You can also directly access the raw directories where these
+<a href="http://sdcc.sourceforge.net/snapshots/">snapshots</a> and
+<a href="http://sdcc.sourceforge.net/regression_test_results/">regression test results</a>
+are stored, rather than using this pretty html version.
           </p>
 <?php include('./footer.php')?>
         </td>
